--- a/qs_account/i18n/fr.po
+++ b/qs_account/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 15.0+e-20221103\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-15 06:13+0000\n"
-"PO-Revision-Date: 2023-03-15 06:13+0000\n"
+"POT-Creation-Date: 2023-04-05 05:39+0000\n"
+"PO-Revision-Date: 2023-04-05 05:39+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -43,6 +43,13 @@ msgid "<span>Total TTC</span>"
 msgstr ""
 
 #. module: qs_account
+#. openerp-web
+#: code:addons/qs_account/static/src/xml/account_followup_template.xml:0
+#, python-format
+msgid "ALL"
+msgstr "Tous"
+
+#. module: qs_account
 #: model:ir.model,name:qs_account.model_account_followup_report
 msgid "Follow-up Report"
 msgstr "Rapport de suivi"
@@ -64,6 +71,13 @@ msgstr "Pièce comptable"
 #: model:ir.model,name:qs_account.model_account_move_line
 msgid "Journal Item"
 msgstr "Écriture comptable"
+
+#. module: qs_account
+#. openerp-web
+#: code:addons/qs_account/static/src/xml/account_followup_template.xml:0
+#, python-format
+msgid "Late payment"
+msgstr "Echues"
 
 #. module: qs_account
 #: model:res.groups,name:qs_account.group_account_user_spec
